--- a/lib/sass/_NavBar.scss
+++ b/lib/sass/_NavBar.scss
@@ -25,7 +25,8 @@ $color-active: #00284b;
 
         @media (max-width: 900px) {
             margin-right: 0px;
-            font-size: 15px;
+            font-size: 16px;
+            width: 130px;
         }
 
         &:hover {
