--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -9,6 +9,7 @@
     text-align: left;
     padding: 5px 20px 25px 20px;
     position: relative;
+    width: 100%;
 
     .record-checkbox {
         margin-right: 10px;
@@ -21,6 +22,8 @@
         font-size: 16px;
         color: $title;
         min-height: 25px;
+        max-width: 95%;
+        line-height: 20px;
     }
     .fetch-link {
 
