--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -26,7 +26,7 @@
         line-height: 20px;
     }
     .fetch-link {
-
+        color: #337ab7;
         cursor: pointer;
         text-decoration: none;
         &:hover{
