--- a/lib/sass/_Profile.scss
+++ b/lib/sass/_Profile.scss
@@ -69,10 +69,8 @@
     .tooltip-text {
         font-size: 12px;
         visibility: hidden;
-        width: 125px;
         top: 100%;
-        left: 50%;
-        margin-left: -60px;
+        left: 0;
         background-color: white;
         color: #4C7392;
         text-align: center;
