change color button authentification

--- a/lib/sass/_App.scss
+++ b/lib/sass/_App.scss
@@ -7,6 +7,10 @@ $color-active: #00284b;
     background-color: $primary-blue;
     border-color: $primary-blue;
 
+    &:disabled:hover {
+        background-color: $primary-blue !important;
+    }
+
     &:hover {
         background-color: $color-active;
         border-color: $color-active;
