--- a/lib/sass/_RecordList.scss
+++ b/lib/sass/_RecordList.scss
@@ -21,7 +21,7 @@
         right: 10px;
         bottom: 5px;
         &.added {
-            color: #f0ad4e !important;
+            color: #FF9982 !important;
         }
     }
     
