--- a/lib/sass/_DL.scss
+++ b/lib/sass/_DL.scss
@@ -49,7 +49,10 @@
     list-style-type: none;
     padding-left: 0;
     li {
-        padding-right: 0.5rem;
+        width: 100%;
+        a {
+            margin-right: 10px;
+        }
     }
     .ul {
         @include inline-list();
