fix bug when display popup in revue page

--- a/lib/sass/_RecordList.scss
+++ b/lib/sass/_RecordList.scss
@@ -35,7 +35,7 @@
         border: 2px solid #FF9982;
         left: initial;
 
-        div.coverage {
+        .coverage {
             font-weight: normal;
             margin-bottom: 6px;
         }
