fix bug and feedback UX for database

--- a/lib/sass/_Database.scss
+++ b/lib/sass/_Database.scss
@@ -32,7 +32,9 @@
             color: #fff;
         }
         li {
-            display: inline-block;
+            a {
+                text-decoration: none;
+            }
         }
     }
     .db {
