--- a/lib/sass/_App.scss
+++ b/lib/sass/_App.scss
@@ -83,6 +83,7 @@ $color-active: #00284b;
 
 #homepageResource {
     position: relative;
+    padding-bottom: 40px;
 
     .resource-opener {
         position: absolute;
