create new favorite domain

--- a/lib/sass/_Profile.scss
+++ b/lib/sass/_Profile.scss
@@ -33,9 +33,10 @@
         visibility: hidden;
         top: 100%;
         left: -35px;
+        margin-right: -20px;
         background-color: white;
         color: #4C7392;
-        padding: 5px 0;
+        padding: 5px 5px;
         border-radius: 6px;
         min-width: 160px;
         position: absolute;
