--- a/lib/sass/_Profile.scss
+++ b/lib/sass/_Profile.scss
@@ -32,15 +32,15 @@
         font-size: 12px;
         visibility: hidden;
         top: 100%;
-        left: -35px;
+        left: -55px;
         margin-right: -20px;
         background-color: white;
         color: #4C7392;
-        padding: 5px 5px;
-        border-radius: 6px;
-        min-width: 160px;
+        padding: 5px;
+        border-radius: 10px;
+        min-width: 200px;
         position: absolute;
-        z-index: 1;
+        z-index: 100;
         b {
            color: #FBAD9A;
         }
