change display for domain selector

--- a/lib/sass/_Profile.scss
+++ b/lib/sass/_Profile.scss
@@ -37,6 +37,7 @@
         background-color: white;
         color: #4C7392;
         padding: 5px;
+        text-align: left;
         border-radius: 10px;
         min-width: 200px;
         position: absolute;
