fix pagination issue and article record width

--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -5,11 +5,12 @@
     border-radius: 10px;
     font-size: 13px;
     line-height: 1em;
-    margin: 0px 20px 20px;
+    margin: 0 15px 20px;
     text-align: left;
-    padding: 5px 20px 25px 20px;
+    padding: 5px 20px 25px;
     position: relative;
     width: 100%;
+    max-width: 1428px;
 
     .record-checkbox {
         margin-right: 10px;
