--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -12,6 +12,13 @@
     width: 100%;
     max-width: 1428px;
 
+    .diamond {
+        margin-left: 10px;
+        img {
+            width: 18px;
+        }
+    }
+
     .record-checkbox {
         margin-right: 10px;
     }
@@ -25,6 +32,8 @@
         min-height: 25px;
         max-width: 95%;
         line-height: 20px;
+        display: flex;
+        align-items: center;
     }
     .fetch-link {
         color: #337ab7;
