--- a/lib/sass/_Record.scss
+++ b/lib/sass/_Record.scss
@@ -15,7 +15,7 @@
     .diamond {
         margin-left: 10px;
         img {
-            width: 18px;
+            height: 19px;
         }
     }
 
