--- a/lib/sass/_NavBar.scss
+++ b/lib/sass/_NavBar.scss
@@ -1,6 +1,6 @@
 @import "./_variables.scss";
 
-$item-radius: 12px;
+$item-radius: 6px;
 $padding-y: 15px;
 $color-active: #00284b;
 
@@ -16,6 +16,10 @@ $color-active: #00284b;
     padding-left: $body-padding-x;
     padding-right: $body-padding-x;
     padding-top: 1rem;
+    padding-bottom: 2rem;
+    @include display-flex;
+    @include justify-content(center);
+
 
     .navbar-brand {
         color:#fff;
@@ -42,35 +46,32 @@ $color-active: #00284b;
         float: none;
 
         .nav-item {
+            border-bottom: 1px solid #fff;
             a {
                 @include display-flex;
                 @include flex-direction(column);
                 @include justify-content(space-between);
                 @include align-items(center);
 
-                .dot {
-                    color: #FF9982;
-                    font-size: 9px;
-                    position: absolute;
-                    top: 6px;
-                }
-
-                border: solid #fff 1px;
                 border-top-right-radius: $item-radius;
                 border-top-left-radius: $item-radius;
                 border-bottom: none !important;
-                color:#fff !important;
+                color:#fff;
                 margin-bottom: 0;
                 margin-right: -1px;
                 padding: $padding-y 20px;
+                transition: all 0.2s ease-in-out;
+                &:hover {
+                    background-color: $color-active;
+                    border-color: $color-active;
+                    color: #fff;
+                }
             }
 
-            &.active a, a:hover {
-                background-color: $color-active;
-                border-color: $color-active;
-                font-weight: bold;
-                margin-bottom: 1px; // to compensate the bold font-weight
-                margin-right: 0px;
+            &.active a {
+                background-color: #fff;
+                border-color: #fff;
+                color: $color-active;
             }
         }
         .connection {
