--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -17,8 +17,8 @@
     .search {
         @include flex(5);
         @include display-flex;
-        @include align-items(flex-start); // to align with the top block containing the navbar
-        @include justify-content(space-between);
+        @include flex-direction(column);
+        @include align-items(center);
         .query-list {
             @include flex(12);
             @include flexbox((
@@ -59,6 +59,7 @@
         }
 
         .buttons {
+            @include align-self(end);
             @include display-flex;
             @include justify-content(flex-start);
             @include align-items(flex-start);
@@ -69,15 +70,6 @@
 
             button {
                 color: #fff !important;
-            }
-
-            .search-button {
-                background-color: transparent;
-                border: 2px solid #fff;
-                color:#fff;
-                font-size: 16px;
-                height: 50px;
-                width: 100%;
             }
         }
     }
