--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -44,9 +44,6 @@
             ));
             @include flex-wrap(wrap);
             margin-bottom: 10px;
-            .search-input {
-                @include flex(11);
-            }
             .action {
                 @include flex(1);
                 @include display-flex;
@@ -55,7 +52,7 @@
         }
 
         .search-input {
-            @include flex(11); // on publication tab this is not inside a .query element, needs investigation
+            @include flex-basis(50px);
         }
 
         .buttons {
@@ -65,6 +62,7 @@
             @include align-items(flex-start);
             @include flex-direction(column);
             @include flex(4);
+            @include flex-basis(2rem);
             margin-left: 20px;
 
 
