Feat: add doi and type in metadore record

--- a/lib/sass/_A2zSearch.scss
+++ b/lib/sass/_A2zSearch.scss
@@ -23,4 +23,9 @@
             background-color: $primary-blue-alt;
         }
     }
+
+    > div {
+        max-width: 800px;
+        margin: 0 auto;
+    }
 }
