--- a/lib/sass/_Profile.scss
+++ b/lib/sass/_Profile.scss
@@ -32,7 +32,7 @@
         font-size: 12px;
         visibility: hidden;
         top: 100%;
-        left: -55px;
+        right: 0;
         margin-right: -20px;
         background-color: white;
         color: #4C7392;
