Feat: translate database component

--- a/lib/sass/_Eds.scss
+++ b/lib/sass/_Eds.scss
@@ -10,6 +10,7 @@
     color: white;
     padding: 12px;
     margin-top: 10px;
+    width: 100%;
     p {
         width: 90%;
         text-align: center;
