Feat: Add legend for OA and diamond

--- a/lib/sass/_SearchResultWithSidebar.scss
+++ b/lib/sass/_SearchResultWithSidebar.scss
@@ -56,3 +56,10 @@
         }
     }
 }
+
+.search-loading {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 300px;
+}
