--- a/lib/sass/style.scss
+++ b/lib/sass/style.scss
@@ -13,6 +13,8 @@
 @import "./_Error.scss";
 @import "./_Eds.scss";
 @import "./_NavBar.scss";
+@import "./_SearchLegend.scss";
+@import "./_SearchResult.scss";
 @import "./_SearchResultWithSidebar.scss";
 @import "./_transition.scss";
 @import "./_Authentication.scss";
