--- a/lib/sass/_Database.scss
+++ b/lib/sass/_Database.scss
@@ -1,3 +1,8 @@
+.database-block {
+    .search-bar {
+        justify-content: center;
+    }
+}
 .database-block__filter {
     display: flex;
     align-items: center;
