Feat: field selector style

--- a/lib/sass/_Search.scss
+++ b/lib/sass/_Search.scss
@@ -70,5 +70,32 @@
                 color: #fff !important;
             }
         }
+
+        .metadore-field-selector {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            color: #e0e0e0;
+            padding-top: 10px;
+            input[type="checkbox"] {
+                display: none;
+            }
+              
+            input[type="checkbox"] + label {
+                transition: all 500ms ease;
+                cursor: pointer;
+                padding: 5px 20px;
+                margin: 0 0 0 5px;
+                border-radius: 5px;
+                border: 1px solid #e0e0e0;
+                color: #e0e0e0;
+            }
+            
+            input[type="checkbox"]:checked + label {
+                background-color: #e0e0e0;
+                color: #0050a0;
+            }
+            
+        }
     }
 }
