--- a/lib/sass/_SearchDomains.scss
+++ b/lib/sass/_SearchDomains.scss
@@ -7,12 +7,12 @@
     padding: 5px 20px;
     margin: 5px 5px 0 0;
     border-radius: 5px;
-    border: 1px solid #e0e0e0;
-    color: #e0e0e0;
+    border: 1px solid white;
+    color: white;
     cursor: pointer;
 
     &.active {
-      background-color: #e0e0e0;
+      background-color: white;
       color: #0050a0;
     }
   }
