--- a/lib/sass/_SearchDomains.scss
+++ b/lib/sass/_SearchDomains.scss
@@ -10,6 +10,7 @@
     border: 1px solid white;
     color: white;
     cursor: pointer;
+    background-color: transparent;
 
     &.active {
       background-color: white;
